# lq-ai-fork

./: .dockerignore  .env.bak-f0-s4  .env.example  .env.private.example  .env.prod.example  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICES.md  README.md  SECURITY.md  UPSTREAM.md  docker-compose.private.yml  docker-compose.prod.yml  docker-compose.yml  gateway.yaml.example  ruff.toml
api/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial.py  0002_add_must_change_password.py  0003_create_files_table.py  0004_create_documents_and_chunks.py  0004_create_projects.py  0005_create_documents_and_chunks.py  0006_create_chats_and_messages.py  0007_create_knowledge_bases.py  0008_drop_inference_routing_log_message_fks.py  0009_create_user_export_jobs.py  0010_create_organization_profile.py  0011_create_saved_prompts.py  0012_add_requested_model_to_messages.py  0013_create_user_skills.py  0014_create_teams.py  0015_enhance_prompt_and_user_prefs.py  0016_chat_search_fts.py  0017_role_and_work_product_attribution.py  0018_session_timeout_columns.py  0019_user_preferences_extension.py  0020_messages_kind_discriminator.py  0021_project_knowledge_bases_junction.py  0022_add_projects_is_sandbox.py  0023_add_user_skills_slash_alias_and_forked_from.py  0024_normalized_content_and_was_ocrd.py  0025_create_message_citations.py  0026_paraphrase_judge_and_partial.py  0027_ensemble_method_values.py  0028_projects_ensemble_verification.py  0029_inference_routing_log_purpose.py  0030_ingest_observability.py  0031_playbooks.py  0032_seed_builtin_playbooks_nda.py  0033_seed_builtin_playbooks_msa_dpa.py  0034_playbooks_deleted_at.py  0035_easy_playbook_generations.py  0036_tabular_executions.py  0037_slack_workspaces.py  0038_teams_tenants.py  0039_autonomous_layer.py  (+61 more)
api/app/: __init__.py  admin_bootstrap.py  audit.py  auth_tokens.py  cache.py  cli.py  config.py  email.py  errors.py  lifecycle_email.py  main.py  observability.py  observability_helpers.py  ropa_export.py  ropa_graph.py  ropa_summary.py  storage.py
api/app/agents/: __init__.py  adversarial_review.py  ai_system_changes.py  area_agent.py  assessment_tools.py  budget.py  capabilities.py  checkpointer.py  commercial_tools.py  compliance_tools.py  composition.py  cost.py  deal_changes.py  document_summary_tools.py  factory.py  fan_out_middleware.py  guard.py  hitl.py  knowledge_tools.py  lease.py  live_changes.py  matter_consolidation.py  matter_conversation_tools.py  matter_fact_tools.py  matter_memory_tools.py  matter_read_tools.py  matter_roster_tools.py  memory_backend.py  negotiation_service.py  playbook_context.py  playbook_proposal.py  profiles.py  redline_render.py  redline_service.py  review_edited_document_tools.py  ropa_changes.py  ropa_tools.py  runner.py  skill_backend.py  store.py  (+4 more)
api/app/aiact/: __init__.py  classify.py  ruleset.py
api/app/api/: __init__.py  _stub.py  admin.py  (+39 more)
api/evals/: README.md  __init__.py  conftest.py  fixtures.py  report.py  runner.py  scoring.py  seed_fixtures.py  test_qualification.py  test_scoring_unit.py
api/tests/: conftest.py  test_access_log_scrub.py  test_admin_aliases.py  test_admin_bootstrap.py  test_admin_disable.py  test_admin_intake_bridges.py  test_admin_model_menu.py  test_admin_provider_keys.py  test_admin_users_list.py  test_arq_smoke.py  test_assessment.py  test_assessment_read.py  test_audit_log.py  test_auth.py  test_bootstrap_status.py  test_branding.py  test_builtin_msa_dpa_playbooks.py  test_builtin_nda_playbooks.py  test_caddy_config.py  test_chat_citations.py  test_chat_rag.py  test_chat_receipts.py  test_chats_endpoints.py  test_chats_send_message.py  test_chats_skills_forwarding.py  test_chats_tier_floor.py  test_chats_unit.py  test_chunker.py  test_classification_schema.py  test_classify_engine.py  test_cli.py  test_compliance_read.py  test_compliance_schema.py  test_config.py  test_cors_methods.py  test_deployment_capabilities_api.py  test_easy_playbook_assembly.py  test_easy_playbook_clustering.py  test_easy_playbook_endpoints.py  test_easy_playbook_extractor.py  (+98 more)
gateway/: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
gateway/app/: __init__.py  azure_identity.py  cli.py  config.py  config_holder.py  config_loader.py  config_writer.py  db.py  errors.py  keyvault.py  main.py  model_discovery.py  observability.py  observability_helpers.py  provider_keys.py  router.py  routing_log.py  secrets.py  tier_floor.py
gateway/tests/: conftest.py  test_admin.py  test_admin_aliases.py  test_admin_config_readonly.py  test_anonymization_observability.py  test_anthropic_adapter.py  test_anthropic_provider.py  test_azure_managed_identity.py  test_azure_openai_adapter.py  test_backend_client.py  test_build_adapter.py  test_config.py  test_config_holder.py  test_errors.py  test_health.py  test_inference.py  test_inference_anonymization.py  test_inference_anthropic.py  test_inference_azure_openai.py  test_inference_b4.py  test_inference_embeddings.py  test_inference_gateway_auth.py  test_inference_inline_skills.py  test_inference_ollama.py  test_inference_skill_assembly.py  test_inference_spans.py  test_inference_streaming_routing_log.py  test_inference_tier_floor.py  test_keyvault.py  test_model_discovery.py  test_observability.py  test_observability_helpers.py  test_ollama_adapter.py  test_openai_adapter.py  test_openai_content_blocks.py  test_provider_error_mapping.py  test_provider_keys.py  test_router.py  test_routing_log.py  test_routing_log_db.py  (+4 more)
slack-bridge/: Dockerfile  README.md  manifest.yml  pyproject.toml
slack-bridge/app/: config.py  main.py  oauth.py  observability.py  signing.py
slack-bridge/tests/: conftest.py  test_config.py  test_oauth.py  test_signing.py
teams-bridge/: Dockerfile  README.md  manifest.json  pyproject.toml
teams-bridge/app/: __init__.py  config.py  main.py  oauth.py  observability.py
teams-bridge/tests/: conftest.py  test_config.py  test_oauth.py
(+1954 files in other folders)
