[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lq-ai-api"
version = "0.1.0"
description = "LQ.AI backend API service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "LegalQuants" }]
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.34",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "greenlet>=3.0,<4",
    # A4 dependencies — readiness wiring + clients used at startup.
    # `redis` ships an async client at `redis.asyncio` (formerly aioredis,
    # merged into redis-py). One library covers sync + async.
    "redis>=5.0,<6",
    # `aioboto3` is an asyncio wrapper over botocore; required because the
    # backend's storage path (Task C4) is async and we don't want to block
    # the event loop on file I/O. Pulls boto3/botocore transitively.
    "aioboto3>=13.0,<14",
    # httpx is FastAPI's recommended async HTTP client and is used by the
    # gateway client. Already a transitive of fastapi/starlette test deps,
    # declared explicitly here because we use it at runtime, not just in tests.
    "httpx>=0.27,<0.29",
    # B1 — auth dependencies (per ADR 0002).
    # bcrypt: password hashing + refresh-token-hash. Direct API; we don't
    # use passlib's bcrypt wrapper because of recurring compatibility
    # issues with bcrypt 4.x+. Pinned to >=4.1 for consistent gensalt API.
    "bcrypt>=4.1,<6",
    # pyjwt: JWT encode/decode for access tokens and MFA challenge tokens.
    # The [crypto] extra ships the PyCA cryptography backend that pyjwt
    # uses for signing — keeps a future move from HS256 to RS256/EdDSA
    # to a config change rather than a dep change.
    "pyjwt[crypto]>=2.9,<3",
    # email-validator: Pydantic's EmailStr requires this at validation time.
    # Used by LoginRequest to reject obviously-malformed addresses before
    # we hit the database. Tiny dep; pulls dnspython transitively.
    "email-validator>=2.0,<3",
    # C1 — skill loader. Reads YAML frontmatter from each SKILL.md.
    # Same library/version range the gateway already uses for gateway.yaml,
    # so no new SBOM family is introduced (see ADR 0004 for the locus
    # decision and CLAUDE.md's bar on new dependencies).
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    # respx mocks httpx at the transport layer; B5 introduces it on the
    # api/ side to test the GatewayClient. Already used the same way in
    # gateway/'s dev deps for the AnthropicAdapter — same library, same
    # pattern, no new SBOM family.
    "respx>=0.21",
    # types-PyYAML — mypy stubs for the C1 skill loader's pyyaml import.
    # Same pin family the gateway already uses.
    "types-PyYAML>=6.0",
]

# Note: a `[project.scripts]` console-script entry was considered for
# the CLI but the current Dockerfile installs the package metadata only
# (the `app/` source tree is `COPY`'d in afterward and imported from
# /app via WORKDIR). A console script would resolve `app.cli:main` at
# entry-point invocation time but `app` is not on the site-packages
# path, so the script fails with ModuleNotFoundError. The canonical
# invocation in docs/quickstart.md is `python -m app.cli` which works
# from /app/. If/when the Dockerfile is changed to install the real
# wheel, a `[project.scripts]` block can be reintroduced here.

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped fixtures (test_db_url, test_engine) need a session-scoped
# event loop — otherwise asyncpg connections created during fixture setup
# end up tied to a function-scoped loop that gets closed between tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: tests that hit Postgres/Redis/MinIO/Gateway",
    "provider: tests that hit a real LLM provider (require API key)",
    "slow: tests that take longer than 5s",
    "e2e: end-to-end tests via Playwright",
]

[tool.mypy]
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true

# aioboto3 / botocore do not ship type stubs (and the boto3-stubs project
# only stubs sync boto3). The backend uses both in `app/storage.py`; we
# tell mypy to skip them rather than slathering # type: ignore[import-untyped]
# at every call site. Per CONTRIBUTING.md, the api/ subsystem uses
# standard mypy mode (not strict mode), so this is in line with policy.
[[tool.mypy.overrides]]
module = ["aioboto3", "aioboto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
