[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lq-ai-gateway"
version = "0.1.0"
description = "LQ.AI Inference Gateway — the security boundary for LLM provider access"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "LegalQuants" }]
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.34",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: tests that hit downstream services",
    "provider: tests that hit a real LLM provider (require API key)",
    "slow: tests that take longer than 5s",
]

[tool.mypy]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
