[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lq-ai-gateway"
version = "0.1.0"
description = "LQ.AI Inference Gateway — the security boundary for LLM provider access"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "LegalQuants" }]
dependencies = [
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.32,<0.34",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "pyyaml>=6.0",
    # B3: provider adapters use httpx.AsyncClient for outbound calls.
    # No `anthropic` SDK — PRD §4 calls for hand-rolled gateway code in
    # lieu of LLM-SDK dependencies, to keep the supply-chain surface honest.
    "httpx>=0.27,<0.29",
    # B4: the router writes one row to inference_routing_log per routed
    # request (the Tier-Derivation choke point per PRD §3.13 / §1.5.2).
    # SQLAlchemy 2.x async engine + asyncpg as the driver — same versions
    # api/ pins so a multi-service deployment doesn't end up with two
    # asyncpg ABIs in one container image. greenlet is a SQLAlchemy
    # transitive that pip resolves automatically; pinned here so the
    # SBOM is honest about it.
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29,<0.31",
    "greenlet>=3.0,<4",
    # ADR 0011: encrypted-at-rest provider keys via Fernet (AES-128-CBC +
    # HMAC-SHA256). The cryptography library is the standard Python AEAD
    # implementation; stdlib stops at hashlib/hmac. Master key is supplied
    # by the operator at gateway startup via LQ_AI_GATEWAY_MASTER_KEY;
    # individual provider keys live encrypted in gateway.yaml under
    # api_key_encrypted: <fernet-token>.
    "cryptography>=42,<46",
    # M-Obs.1 — Prometheus /metrics (PRD §5.4). The official client
    # exposes a stdlib-only counter/histogram/gauge API plus an ASGI
    # app for mounting at /metrics. Small, BSD-licensed, no transitive
    # deps. The deployment scrapes /metrics from operator infra
    # (Prometheus, Grafana Agent, Vector, etc.).
    "prometheus-client>=0.20,<1",
    # M-Obs.1 — OpenTelemetry instrumentation (PRD §5.4). The
    # operator gets distributed traces spanning api → gateway →
    # provider with standard W3C propagation. SDK is dormant unless
    # OTEL_EXPORTER_OTLP_ENDPOINT is set — that's the "no telemetry
    # by default" guarantee in PRD §5.7. Apache-2.0 across the OTel
    # family. The pin-floor matches the OTel stable-API minor that
    # ships the Python `metrics` API as stable.
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1",
    # M2-A3 (PRD §4.7) — Anonymization Layer. Presidio is Microsoft's PII
    # detection/redaction framework; we use it for entity recognition
    # (analyzer) and pseudonym substitution (anonymizer). spaCy is the
    # NLP backbone presidio-analyzer ships with by default; we pull
    # ``en_core_web_lg`` in M2-B2 when custom legal recognizers land.
    # M2-A3 itself only loads the PseudonymMapper (in-process counter,
    # no spaCy/presidio runtime use); the heavy import path is deferred
    # to M2-B3 middleware integration.
    "presidio-analyzer~=2.2",
    "presidio-anonymizer~=2.2",
    "spacy~=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure unit tests, no I/O",
    "integration: tests that hit downstream services",
    "provider: tests that hit a real LLM provider (require API key)",
    "slow: tests that take longer than 5s",
]

[tool.mypy]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
