[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lq-ai-slack-bridge"
version = "0.1.0"
description = "LQ.AI Slack bridge — OAuth install + workspace persistence (M3-D1)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "LegalQuants" }]

# M3-D1 — the slack-bridge is a small standalone service that mediates
# between Slack's OAuth/Events APIs and the LQ.AI backend. It carries:
#
# 1. The OAuth install flow (operator clicks "Install" in the LQ.AI
#    admin UI → bridge redirects to Slack's consent page → callback
#    exchanges the code for a bot token → bridge POSTs the workspace
#    record to the LQ.AI api over an internal bridge token).
# 2. (Future M3-D2 / community contribution) the `/lq` slash command
#    handler. Descoped from M3 per PRD §9 DE-288.
#
# The bridge holds NO long-lived secrets except the OAuth state token
# (in-memory, TTL'd). Bot tokens land in the LQ.AI api's encrypted
# storage immediately on receipt.
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.32,<0.48",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    # httpx is used both inbound (in FastAPI tests via the TestClient
    # transport) and outbound (calling the LQ.AI api to persist
    # workspace records).
    "httpx>=0.27,<0.29",
    # slack-sdk: official Slack Python SDK. We use it for OAuth code
    # exchange (`AsyncWebClient.oauth_v2_access`) and for request
    # signature verification on inbound webhooks (the same primitive
    # M3-D2 will use when the slash-command surface lands). Pinning
    # the 3.x line; 4.x is not yet released.
    "slack-sdk>=3.27,<4",
    # aiohttp is a transitive runtime requirement of slack_sdk's async
    # web client (slack_sdk.web.async_client.AsyncWebClient). slack-sdk
    # treats it as an optional/lazy dep; we pin it explicitly because
    # every OAuth callback uses the async client, so an unpinned
    # missing-aiohttp is a runtime crash on first install.
    "aiohttp>=3.10,<4",
    # OpenTelemetry — mirrors api/ + gateway/ so the bridge participates
    # in the M1 OTel substrate from day one. The deepening work in
    # M3 Phase F (per docs/proposals/opentelemetry-deepening.md) will
    # add domain spans; the substrate exporters are already wired here
    # so the bridge's traces propagate cleanly into the trace tree.
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-httpx>=0.32,<0.40",
    "ruff>=0.6,<0.14",
    "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
